typescript/checker/tests/errors/var-assignment/index.ts
let a: string = 1;
